--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cool-music-player": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
     "react-hook-form": "^6.3.1",
