--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SkySpaces",
+  "name": "skyspaces",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
@@ -32,6 +32,9 @@
     "http-status-codes": "^1.4.0",
     "jquery": "^3.5.1",
     "jquery.easing": "^1.4.1",
+    "localforage": "^1.9.0",
+    "localforage-getitems": "^1.4.2",
+    "localforage-setitems": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "material-table": "1.67.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
@@ -65,7 +68,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.6.2",
-    "skynet-js": "2.5.0",
+    "skyid": "0.0.4",
+    "skynet-js": "2.9.0",
     "styled-components": "^5.2.1",
     "text-ellipsis": "^1.0.3",
     "typescript": "^3.9.7",
