--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.13",
+    "react-useinterval": "^1.0.2",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
