--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "path-browserify": "^1.0.1",
     "pretty-bytes": "^5.3.0",
     "react": "^16.13.1",
+    "react-awesome-lightbox": "^1.7.3",
     "react-bootstrap": "^1.3.0",
     "react-cool-music-player": "^1.0.6",
     "react-dom": "^16.13.1",
